# ppl

./: .gitignore
chess-ai/: AI.hs  Chess12.hs  Chess8.hs  Chess9.hs  Lib.hs  Main.hs  README.md
chess-ai/chess-ai2/: Chess.hs  Chess12.hs  Chess8.hs  Chess9.hs  ChessSolver.hs  ChessSolverOrig.hs
chess-ai/chess-ai2/Chess/: Abstract.hs  Data.hs  Rules.hs
chess-hs/: Chess.hs  README.md
exercises/: member.pl
ppl-week2/: README.md  class.pl  snake.pl  snake2.pl  tests.pl
week1/: README.md
week1/assign1/: royal_family_defs.pl  royal_family_facts.pl
week1/assign2/: monkey.pl
week1/assign3/: extra.pl  tree.pl
week3/: README.md  exampleProgram.py0  exampleProgram_combined.py0  exampleProgram_functions.py0  interpreter.py  newFuncs.py0  test.py0  test_recursive.py0
week3and4/: Makefile  README.md  exampleProgram-1.py0  exampleProgram-1_output.txt  exampleProgram.py0  exampleProgram_combined_output.txt  exampleProgram_functions_output.txt  exampleProgram_output.txt  exampleProgram_while.py0  exampleProgram_while_output.txt  helloWorld.py0  helloWorld_output.txt  ifelse.py0  ifelse_output.txt  interpreter.py  newFuncs.py0  newFuncs_output.txt  test.py0  test_forin.py0  test_forin_output.txt  test_output.txt
week7/: memory_exercise.py
week8/: offbyone.py
week9/: .cacher_cacher.json  .foobar_cacher.json  Cargo.toml  Makefile  README.md  timer_file.txt
week9/src/: lib.rs
week9/tests/: test.rs
