[package]
name = "week9"
version = "0.1.0"
authors = ["Benjamin Cape <benjcape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
heck = "0.3.3"
syn = { version = "1.0.73", features = ["full"] }
primes = "0.3.0"

[dev-dependencies]
serde = {version = "1.0.126", features = ["serde_derive"]}
serde_json = "1.0.65"

[lib]
proc-macro = true
